Target Java 8 instead of 21 at runtime; test code still at source level 21 (#147)
* Ignore Eclipse project files
* Introduce .sdkmanrc
* Target Java 8 instead of 21 at runtime; test code still at source level 21
* Update website docs to reflect Java 8 runtime target
* Add javadoc to Coordinates accessor methods

---------

Co-authored-by: Guillaume Nodet <gnodet@gmail.com>