@@ -50,7 +50,7 @@ public class BuilderPatternsSnippets extends BaseSnippetTest {
         Editor editor2 = new Editor(Document.of("<root></root>"));
 
         // Create from file (example)
-        // Editor editor3 = new Editor(Document.of(Files.readString(Paths.get("document.xml"))));
+        // Editor editor3 = new Editor(Document.of(new String(Files.readAllBytes(Path.of("document.xml"))));
         // end-snippet:document-creation
 
         Assertions.assertNotNull(editor);
